Further UA Hackery; Fixing redirects (Multi-redirects) Credit: MrLavender for code in CMPDL